Basic structure of the application

--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -1,9 +1,7 @@
 <ion-header>
     <ion-navbar>
 
-        <ion-title>
-            {{ title }}
-        </ion-title>
+        <ion-title>{{ title }}</ion-title>
 
         <ion-buttons end>
             <popover-action-component></popover-action-component>
@@ -13,7 +11,4 @@
 </ion-header>
 
 <ion-content padding>
-    info page
 </ion-content>
-
-<tabs-component></tabs-component>
