--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -1,6 +1,5 @@
 <ion-header>
     <ion-navbar>
-
         <ion-title>
             {{ title }}
         </ion-title>
@@ -12,8 +11,6 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-    info page
-</ion-content>
+<ion-content>
 
-<tabs-component></tabs-component>
+</ion-content>
