Basic structure of the application

--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -4,7 +4,7 @@
         <ion-title>{{ title }}</ion-title>
 
         <ion-buttons end>
-            <popover-action-component></popover-action-component>
+            <settings-action-component></settings-action-component>
         </ion-buttons>
 
     </ion-navbar>
@@ -12,3 +12,5 @@
 
 <ion-content padding>
 </ion-content>
+
+<!--<settings-action-component></settings-action-component>-->
