--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -5,15 +5,12 @@
             {{ title }}
         </ion-title>
 
-        <ion-buttons end>
-            <popover-action-component></popover-action-component>
-        </ion-buttons>
-
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
     settings
+    <div style="height: 1100px;">
+        top
+    </div>
 </ion-content>
-
-<tabs-component></tabs-component>
