--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
-<ion-tabs [selectedIndex]="mySelectedIndex">
-  <ion-tab [root]="tab1Root" tabTitle="Активность" tabIcon="paper"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Бюджет" tabIcon="pricetag"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Статистика" tabIcon="stats"></ion-tab>
+<ion-tabs [selectedIndex]="mySelectedIndex" class="main-tabs">
+    <ion-tab [root]="tab1Root" tabTitle="Активность" tabIcon="paper"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Бюджет" tabIcon="pricetag"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Шаблоны" tabIcon="code"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Статистика" tabIcon="stats"></ion-tab>
 </ion-tabs>
