--- a/src/pages/add-transaction/add-transaction.html
+++ b/src/pages/add-transaction/add-transaction.html
@@ -1,17 +1,13 @@
 <ion-header>
-  <ion-navbar>
+    <ion-navbar>
 
-    <ion-title>
-      {{ title }}
-    </ion-title>
+        <ion-title>
+            {{ title }}
+        </ion-title>
 
-      <ion-buttons end>
-          <settings-action-component></settings-action-component>
-      </ion-buttons>
-
-  </ion-navbar>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    autopayment
+    Добавление транзакции
 </ion-content>
