--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -9,8 +9,20 @@
 </ion-header>
 
 <ion-content padding>
-    settings
-    <div style="height: 1100px;">
-        top
-    </div>
+
+    <ion-list>
+
+        <ion-item>
+            <ion-label>Бюджет на неделю</ion-label>
+            <ion-input type="text" value=""></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label>Переносить остаток</ion-label>
+            <ion-toggle checked="false"></ion-toggle>
+        </ion-item>
+
+    </ion-list>
+
+
 </ion-content>
