--- a/src/pages/add-transaction/add-transaction.html
+++ b/src/pages/add-transaction/add-transaction.html
@@ -9,5 +9,14 @@
 </ion-header>
 
 <ion-content padding>
-    Добавление транзакции
+
+    <div class="grid-row">
+        <div class="grid-column-3 grid-padding grid-left" *ngFor="let category of categories; let i = index">
+            <div class="container-category-group">
+                <category-icon-component [name]="category.slug"></category-icon-component>
+                <div class="b-category-name">{{ category.name }}</div>
+            </div>
+        </div>
+    </div>
+
 </ion-content>
