Dev activity page

--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -41,14 +41,13 @@
     <div padding>
         <div class="grid-row">
             <div class="grid-column-12 grid-padding grid-left" *ngFor="let transaction of transactions; let i = index">
-                <div>
-                    {{ transaction.description }}
-                </div>
+                <transaction-item-component [transaction]="transaction"></transaction-item-component>
             </div>
         </div>
     </div>
 
 
     <transaction-action-component></transaction-action-component>
+
 </ion-content>
 
