Dev activity page

--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -38,7 +38,7 @@
 <ion-content>
 
 
-    <div padding>
+    <div>
         <div class="grid-row">
             <div class="grid-column-12 grid-padding grid-left" *ngFor="let transaction of transactions; let i = index">
                 <transaction-item-component [transaction]="transaction"></transaction-item-component>
