--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div *ngIf="totalCount == 0" class="util-empty-box">Нет данных для отображения</div>
+    <div *ngIf="totalCount == 0" class="util-empty-box fadeIn animated">Нет данных для отображения</div>
 
     <ion-infinite-scroll *ngIf="transactions.length > 0 && totalCount > transactions.length" (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content loadingText="Загружаю данные...">
