--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -11,20 +11,35 @@
         </ion-buttons>
 
     </ion-navbar>
+
+    <ion-item class="container-select">
+        <ion-label>Показать статистику: </ion-label>
+        <ion-select [(ngModel)]="period" cancelText="Закрыть">
+            <ion-option value="week" selected="true">За неделю</ion-option>
+            <ion-option value="month" selected="true">За месяц</ion-option>
+            <ion-option value="month3" selected="true">3 месяца</ion-option>
+            <ion-option value="year" selected="true">За год</ion-option>
+            <ion-option value="all" selected="true">За все время</ion-option>
+        </ion-select>
+    </ion-item>
+
 </ion-header>
 
 <ion-content>
-    <div>
-        <div style="display: block">
-            <canvas baseChart
-                    [datasets]="barChartData"
-                    [labels]="barChartLabels"
-                    [options]="barChartOptions"
-                    [legend]="barChartLegend"
-                    [chartType]="barChartType"
-                    (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)"></canvas>
-        </div>
-        <button (click)="randomize()">Update</button>
+
+    <!--[(ngModel)]="type" (ionChange)="selectedType($event)"-->
+    <ion-segment>
+        <ion-segment-button value="0">
+            Расход
+        </ion-segment-button>
+        <ion-segment-button value="1">
+            Доход
+        </ion-segment-button>
+
+    </ion-segment>
+
+
+    <div *ngIf="isReadyChart" class="animated fadeIn">
+        <chart [options]="optionsChart"></chart>
     </div>
 </ion-content>
