--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -24,5 +24,9 @@
 
     </ion-list>
 
+    <div class="util-align-center">
+        <button ion-button>Сохранить настройки</button>
+    </div>
+
 
 </ion-content>
