--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -22,6 +22,11 @@
             <ion-toggle name="saveRest" [(ngModel)]="settings.saveRest.value"></ion-toggle>
         </ion-item>
 
+        <ion-item>
+            <ion-label>Показывать уведомления</ion-label>
+            <ion-toggle name="showNotify" [(ngModel)]="settings.showNotify.value"></ion-toggle>
+        </ion-item>
+
         <br>
 
         <div class="util-align-center">
