--- a/src/pages/update-template/update-template.html
+++ b/src/pages/update-template/update-template.html
@@ -13,6 +13,6 @@
             [idCategorySelected]="template.category_id"
             [type]="template.type"
             [inputData]="template"
-            [serviceType]="serviceType">
+            [eventType]="eventType">
     </transaction-form-component>
 </ion-content>
