--- a/src/pages/add-template/add-template.html
+++ b/src/pages/add-template/add-template.html
@@ -9,5 +9,5 @@
 </ion-header>
 
 <ion-content>
-    <transaction-form-component [serviceType]="serviceType"></transaction-form-component>
+    <transaction-form-component [eventType]="eventType"></transaction-form-component>
 </ion-content>
