--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -11,33 +11,39 @@
 
     </ion-navbar>
 
+</ion-header>
+
+<ion-content>
+
+    <div class="b-budget-indicator fadeIn animated">
+        <div class="budget-indicator__data">
+            <span class="budget-indicator__value">{{ percentForText }}</span>
+            <span class="budget-indicator__percent">%</span>
+            <div style="text-align: center;width: 100%">остаток бюджета</div>
+        </div>
+        <div [style.height.%]="percent" [style.transition.s]="indicatorTransition" class="budget-indicator__filled {{ indicatorClassName }}">
+        </div>
+    </div>
+
+
     <div class="container-budget-top">
         <span [ngClass]="{'budget-top-item': true, 'is-warning': leftBudget <= 0}">{{ leftBudgetForDisplay }} &#8381; </span>
         <span class="budget-top-separator">/</span>
         <span class="budget-top-item">{{ overallBudgetForDisplay }} &#8381;</span>
-        <div class="budget-top-subtitle">остаток на неделю</div>
+        <div class="budget-top-subtitle">можно потратить / всего на неделю</div>
     </div>
 
-</ion-header>
-
-<ion-content>
 
     <div *ngIf="totalCount > 0" class="container-budget-list fadeIn animated">
         <div class="grid-row">
             <div class="grid-column-12 grid-padding grid-left" *ngFor="let category of categories">
                 <div class="b-budget-item">
-                    <div class="budget-item__top">
-                        <div class="budget-item__icon">
-                            <category-icon-component [name]="category.slug"></category-icon-component>
-                        </div>
-                        <span class="budget-item__name">{{ category.name }}</span>
-                    </div>
-                    <progressbar-component [type]="category.slug" [sum]="category.sum" [totalSum]="totalSum"></progressbar-component>
+                    <progressbar-component [type]="category.slug" [title]="category.name" [sum]="category.sum" [totalSum]="totalSum"></progressbar-component>
                 </div>
             </div>
         </div>
     </div>
 
-        <div *ngIf="totalCount == 0" class="util-empty-box fadeIn animated">Нет расходов на этой неделе</div>
+    <empty-box-component *ngIf="totalCount == 0" [text]="emptyText"></empty-box-component>
 
 </ion-content>
