--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,7 +14,7 @@
 
         <ion-item>
             <ion-label stacked>Бюджет на неделю</ion-label>
-            <ion-input type="number" name="budget" placeholder="Введите число" [(ngModel)]="settings.budget.value"></ion-input>
+            <ion-input type="number" name="budget" placeholder="Введите сумму" [(ngModel)]="settings.budget.value"></ion-input>
         </ion-item>
 
         <ion-item>
