--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs [selectedIndex]="mySelectedIndex" class="main-tabs">
-    <ion-tab [root]="tab1Root" tabTitle="Активность" tabIcon="paper"></ion-tab>
-    <ion-tab [root]="tab2Root" tabTitle="Бюджет" tabIcon="pricetag"></ion-tab>
-    <ion-tab [root]="tab3Root" tabTitle="Шаблоны" tabIcon="code"></ion-tab>
-    <ion-tab [root]="tab4Root" tabTitle="Статистика" tabIcon="stats"></ion-tab>
+    <ion-tab [root]="tab1Root" tabTitle="Активность" tabIcon="ios-paper"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Бюджет" tabIcon="ios-cash"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Шаблоны" tabIcon="ios-create"></ion-tab>
+    <ion-tab [root]="tab4Root" tabTitle="Статистика" tabIcon="ios-stats"></ion-tab>
 </ion-tabs>
