--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -30,7 +30,7 @@
         <span [ngClass]="{'budget-top-item': true, 'is-warning': leftBudget <= 0}">{{ leftBudgetForDisplay }} &#8381; </span>
         <span class="budget-top-separator">/</span>
         <span class="budget-top-item">{{ overallBudgetForDisplay }} &#8381;</span>
-        <div class="budget-top-subtitle">можно потратить / всего на неделю</div>
+        <div class="util-subtitle">можно потратить / всего на неделю</div>
     </div>
 
 
