--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -30,7 +30,7 @@
         <br>
 
         <div class="util-align-center">
-            <button ion-button type="submit">Сохранить настройки</button>
+            <button style="margin-top: 10px;" ion-button type="submit">Сохранить настройки</button>
         </div>
     </form>
 
