--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -50,6 +50,8 @@
 
     </div>
 
-    <empty-box-component *ngIf="totalCount == 0"></empty-box-component>
+    <div style="margin-top: 28px;">
+        <empty-box-component *ngIf="totalCount == 0"></empty-box-component>
+    </div>
 
 </ion-content>
