--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -21,7 +21,7 @@
         <br>
 
         <div class="util-align-center">
-            <button ion-button type="submit">Продолжить</button>
+            <button style="margin-top: 10px;" ion-button type="submit">Продолжить</button>
         </div>
     </form>
 
